[tool.poetry]
name = "nft"
version = "0.1.0"
description = ""
authors = ["anuprshetty <anuprshetty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
ipfshttpclient = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
